2007-10-04 [paul]	3.0.2cvs7

	* src/account.c
		remove the D column, instead indicate the
		default account by use of bold text

2007-10-03 [colin]	3.0.2cvs6

	* src/common/template.c
		Fix templates writing (was prone to disk full problems)

2007-10-03 [colin]	3.0.2cvs5

	* src/Makefile.am
	* src/addrduplicates.c
	* src/addrduplicates.h
	* src/addressbook.c
		Add duplicate deletion. Patch by Holger

2007-10-03 [colin]	3.0.2cvs4

	* src/matcher.c
	* src/gtk/quicksearch.c
		Fix bug 1340, 'Case insensitive searches with 
		non-ascii alphabets fail'.

2007-10-03 [colin]	3.0.2cvs3

	* src/main.c
	* src/common/utils.c
	* src/common/utils.h
		Implement run-time alternative config directories

2007-10-03 [colin]	3.0.2cvs2

	* src/folderview.c
		Prevent opening folder item while folder
		is scanned in a better way

2007-10-02 [paul]	3.0.2cvs1

	* NEWS
	* README
	* RELEASE_NOTES
	* configure.ac
		bump up version number following stable release

2007-09-30 [colin]	3.0.1cvs49

	* src/imap.c
		Refresh session if needed

2007-09-30 [colin]	3.0.1cvs48

	* src/imap.c
		Reset folder's session to NULL
		before destroying it

2007-09-30 [mones]	3.0.1cvs47

	* manual/handling.xml
		Use markup quotes instead hardcoded quotes
	* manual/es/handling.xml
		Added new synced section (IMAP subscriptions)

2007-09-29 [colin]	3.0.1cvs46

	* src/imap.c
		Notice disconnections faster

2007-09-28 [colin]	3.0.1cvs45

	* src/addressbook.c
	* src/addrindex.c
		Fix warnings

2007-09-28 [paul]	3.0.1cvs44

	* src/mimeview.c
		fix maemo build

2007-09-28 [paul]	3.0.1cvs43

	* src/account.c
		use gtk_widget_set_size_request() on the label
		so that wrapping works better. get rid of the
		(partially deprecated) hbutton_box.
		these changes should prevent buttons overlapping
		on maemo

2007-09-28 [colin]	3.0.1cvs42

	* src/pop.c
		Fix typo :)

2007-09-28 [colin]	3.0.1cvs41

	* src/compose.c
	* src/msgcache.c
	* src/pop.c
	* src/procmime.c
	* src/etpan/imap-thread.c
		64bits-related warning fixes
